<resources>
    <string name="app_name">Sleep</string>
    <string name="continueText">Continue</string>
    <string name="agreementOfUsage">By clicking Start, I agree to the Terms of Use and Privacy Policy. I understand that device data, IDFA, and non-sensitive app data may be shared with a third party to improve the experience of the app.</string>

    <string name="firstWelcomeTitle">Melodies for\nrelaxation</string>
    <string name="firstWelcomeText">Feel the relaxing atmosphere of the night. Fall asleep naturally and calmly.</string>


    <string name="secondWelcomeTitle">Personal sleep plan</string>
    <string name="secondWelcomeText">The personalized plan analyzes your sleep and adjusts to you so you can sleep better.</string>

    <string name="thirdWelcomeTitle">Alarm sounds</string>
    <string name="thirdWelcomeText">Morning will be good! Meet the new day with joy, wake up to your favorite music.</string>

    <string name="start">Start</string>

    <string name="choose_a_goal">Choose a goal</string>
    <string name="choosing_goal_description">This will help create\na personalized sleep plan.</string>
    <string name="fall_asleep_faster">Fall asleep\nfaster</string>
    <string name="make_your_sleep_deep">Make your\nsleep deep</string>
    <string name="get_up_easy_in_the_morning">Get up easy\nin the morning</string>
    <string name="improve_sleep_quality">Improve\nsleep quality</string>
    <string name="home">Home</string>
    <string name="sleep">Sleep</string>
    <string name="melodies">Melodies</string>
    <string name="profile">Profile</string>
    <string name="today">Today</string>
    <string name="fall_into_a_dream">Fall into a dream</string>
    <string name="night">Night %1$d</string>
    <string name="go_to_test">Go to test</string>
    <string name="gadgets_before_bed">Gadgets before bed</string>
    <string name="gadges_description">Elit nec pulvinar fames convallis mauris volutpat arcu volutpat.</string>
    <string name="sleep_coach">Sleep coach</string>
    <string name="tip_of_the_day">Tip of the day</string>
    <string name="sleep_settings">Sleep settings</string>
    <string name="alarm">Alarm\ </string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="choose">Choose</string>
    <string name="smart_alarm">\"Smart\" alarm</string>
    <string name="good_night">Good night and good dreams!</string>
    <string name="music_for_sleep">Music for sleep</string>
    <string name="dive_into_sleep">Dive into sleep</string>
    <string name="dream">Dream</string>
    <string name="qustion1">How many hours before a meal do you last eat?</string>
    <string name="previous_question">Previous question</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="allow_notifications">Allow notifications</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="turn_un_notifications">Turn on notifications to keep track of your sleep</string>
    <string name="snooze_alarm">Snooze alarm</string>
    <string name="repeat_time">Repeat time</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="support">Support</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="partners">Partners</string>
    <string name="my_account">My account</string>
    <string name="personal_information">Personal information</string>
    <string name="subscription">Subscription</string>
    <string name="subscription_hint">Subscription automatically renews at the end of the subscription period</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="type">Type</string>
    <string name="premium">Premium</string>
    <string name="selectDate">Select date</string>
    <string name="during">During</string>
    <string name="question_number">Question %1$d of %2$d</string>
    <string name="done">Done</string>
    <string name="test_completed">Test completed!</string>
    <string name="read_tips">Read Tips</string>
    <string name="try_it_for_free">Try it for free</string>
    <string name="the_best_sleep_app">The best sleep app</string>
    <string name="limited_offer">Limited\noffer</string>
    <string name="weekly">Weekly</string>

    <string name="min">%1$d min</string>
    <string name="next_question">Next question:</string>
    <string name="wake_up">Wake up</string>
    <string name="wake_up_notifications">Wake up notifications</string>
    <string name="notifications_descriptor">Turn on notifications so that our alarm clock wakes you up</string>
    <string name="allow">Allow</string>
    <string name="not_now">Not now</string>
    <string name="turn_off">TURN OFF</string>
    <string name="fillInInformation">Click to ddd information about yourself</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="tips">Tips</string>
    <string name="sleep_basics">Sleep basics</string>
    <string name="check_your_internet_connection">Check your Internet connection</string>
    <string name="basic">Basic</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sleep_wellness_quiz">Sleep Wellness Quiz</string>
    <string name="something_went_wrong">Something went wrong</string>


</resources>
