<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/menu_home_selector"
        android:title="@string/home"
        app:actionLayout="@layout/bottom_nav_item" />
    <item
        android:id="@+id/menuSleep"
        android:icon="@drawable/menu_sleep_selector"
        android:title="@string/sleep"
        app:actionLayout="@layout/bottom_nav_item" />
    <item
        android:id="@+id/menuMelodies"
        android:icon="@drawable/menu_melodies_selector"
        android:title="@string/melodies"
        app:actionLayout="@layout/bottom_nav_item" />
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/menu_profile_selector"
        android:title="@string/profile"
        app:actionLayout="@layout/bottom_nav_item" />
</menu>
