<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingFragment">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="376dp"
            android:gravity="center"
            android:src="@drawable/worky_yoga_woman" />

        <TextView
            android:id="@+id/titleText"
            style="@style/TitleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/firstWelcomeTitle" />

        <TextView
            android:layout_marginTop="16dp"
            android:id="@+id/descriptionText"
            style="@style/SecondaryTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:text="@string/firstWelcomeText"
        />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@id/indicatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/buttonNext"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/rounded_button_blue" />

        <TextView
            android:id="@+id/buttonText"
            style="@style/PrimaryTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/continueText" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/indicatorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="34dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/agreementText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:id="@+id/indicator1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/blue_circle_indicator" />

        <View
            android:id="@+id/indicator2"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/gray_circle_indicator" />

        <View
            android:id="@+id/indicator3"
            android:layout_width="8dp"
            android:layout_height="8dp"
            android:background="@drawable/gray_circle_indicator" />
    </LinearLayout>

    <TextView
        android:id="@+id/agreementText"
        style="@style/SmallTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:text="@string/agreementOfUsage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
